force-app/batch-panel/objects/Batch_Detail__c/Batch_Detail__c.object-meta.xml
<CustomObject>
    <label>Batch Detail</label>
    <nameField>
        <label>Batch Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>