force-app/batch-panel/objects/Batch_Detail__c/fields/First_launch_DT__c.field-meta.xml
<CustomField>
    <fullName>First_launch_DT__c</fullName>
    <label>First launch DT</label>
    <type>DateTime</type>
</CustomField>