force-app/batch-panel/objects/Batch_Detail__c/fields/Interval_Mode__c.field-meta.xml
<CustomField>
    <fullName>Interval_Mode__c</fullName>
    <label>Interval Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minutes</fullName>
                <default>true</default>
                <label>Minutes</label>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>