force-app/batch-panel/objects/Batch_Detail__c/fields/Last_Duration_Min__c.field-meta.xml
<CustomField>
    <fullName>Last_Duration_Min__c</fullName>
    <description>Last duration of batch execution</description>
    <label>Last Duration Min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>