force-app/batch-panel/objects/Batch_Detail__c/fields/Panel_Label__c.field-meta.xml
<CustomField>
    <fullName>Panel_Label__c</fullName>
    <label>Panel Label</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>