force-app/batch-panel/objects/Batch_Detail__c/fields/Relaunch_Interval__c.field-meta.xml
<CustomField>
    <fullName>Relaunch_Interval__c</fullName>
    <label>Relaunch Interval</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>