force-app/batch-panel/objects/Batch_Detail__c/fields/Scope_Size__c.field-meta.xml
<CustomField>
    <fullName>Scope_Size__c</fullName>
    <label>Scope Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>