force-app/batch-panel/objects/Batch_Detail__c/validationRules/Name_Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_Read_Only</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Name)</errorConditionFormula>
    <errorMessage>This field read only!</errorMessage>
</ValidationRule>