force-app/batch-panel/objects/Batch_Detail__c/validationRules/Scope_Size_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Scope_Size_Greater_Than_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>Scope_Size__c  &lt;= 0</errorConditionFormula>
    <errorMessage>Scope Size must be greater than 0</errorMessage>
</ValidationRule>